# dewiktionary-htmldump-parser

./: .gitignore  README.md  czech_flexion_category_urls.txt  pyproject.toml  todo.txt
dewiktionary_htmldump_parser/: generate_dictionary.py  inflection_remover.py  main.py  parse_xml.py  scrape_category_html.py  testing.py
tests/: test_dewiktionary_htmldump_parser.py
