[tool.poetry]
authors = ["Vuizur <Vuizur@users.noreply.github.com>"]
description = ""
name = "dewiktionary-htmldump-parser"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "*"
lxml = "*"
python = "^3.10"
mwxml = "*"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "*"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
